[package]
name = "web_scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["blocking"] }
scraper = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
tokio = { version = "1", features = ["full"] }